# CloakDNS

./: .gitignore  CLAUDE.md  CMakeLists.txt  CONTEXT.md  README.md  build-msvc.bat  cloakdns-capture.toml  cloakdns.toml
.github/workflows/: blocklists.yml  ci.yml  ech.yml
allowlists/: major-domains.txt
blocklists/: tier1.txt
deploy/: cloakdns.plist  cloakdns.service  install-windows.ps1
docs/: research-roadmap.md
features/: 01-udp-dns-forwarding.md  02-domain-blocking.md  03-cname-uncloaking.md  04-allowlist-passthrough.md  05-ttl-cache-with-jitter.md  06-edns0-padding.md  07-hot-reload.md  08-structured-query-log.md  09-dot-upstream.md  10-doh-upstream.md  11-ech-encrypted-client-hello.md  12-spki-cert-pinning.md  13-abuse-qtype-refusal.md  14-modern-qtype-dispatch.md  README.md
include/cloakdns/: aliases.hpp  blocklist.hpp  cache.hpp  config.hpp  dns_message.hpp  dns_parser.hpp  dns_writer.hpp  ech_bootstrap.hpp  edns_padding.hpp  etld.hpp  http_client.hpp  paths.hpp  privilege.hpp  query_log.hpp  resolver.hpp  resolver_factory.hpp  server.hpp  tls.hpp  tls_adapter.hpp  uncloaker.hpp  upstream.hpp  wire_endian.hpp
src/: blocklist.cpp  cache.cpp  config.cpp  dns_parser.cpp  dns_writer.cpp  doh_adapter.cpp  dot_adapter.cpp  ech_bootstrap.cpp  edns_padding.cpp  etld.cpp  http_client.cpp  main.cpp  paths.cpp  privilege.cpp  query_log.cpp  resolver.cpp  resolver_factory.cpp  server.cpp  tls.cpp  udp_adapter.cpp  uncloaker.cpp  upstream.cpp  upstream_doh.cpp  upstream_dot.cpp
tests/: CMakeLists.txt  fixtures.hpp  test_blocklist.cpp  test_cache.cpp  test_config.cpp  test_dns_parser.cpp  test_dns_writer.cpp  test_dot.cpp  test_ech_bootstrap.cpp  test_edns_padding.cpp  test_etld.cpp  test_http_client.cpp  test_paths.cpp  test_query_log.cpp  test_resolver.cpp  test_tls.cpp  test_uncloaker.cpp  test_upstream.cpp
tests/fuzz/: fuzz_dns_parser.cpp
tools/: bench_qps.py  blocklist_sources.toml  capture_chrome_dns.ps1  refresh_blocklists.ps1  refresh_blocklists.sh  soak_test.py  test_update_blocklists.py  update_blocklists.py
tools/e2e/: README_ech_verify.md  analyze.py  analyze_india.py  bootstrap_refresh_test.py  corpus.txt  corpus_india.txt  crawl.py  india_adtech_crawl.py  india_adtech_mine.py  jitter_test.py  reload_ech_log_smoke.py  reload_ech_test.py  reload_test.py  sanitizer_replay.py  tier_hit_rates.py  verify_ech.py
tools/priority_tiers/: cname_cloaking.txt  cookie_syncing.txt  data_brokers.txt  desktop_telemetry.txt  email_tracking.txt  evercookies.txt  extension_exfiltration.txt  fingerprinting.txt  india_adtech.txt  server_side_apis.txt  smart_device_telemetry.txt
